@@ -1,3 +1,8 @@
+2018-10-22  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m.el (w3m-decode-encoded-contents): Use the conventional way if
+	zlib-decompress-region returns nil ([emacs-w3m:13038]).
+
 2018-06-13  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* w3m.el (w3m-user-agent-default-alist): Fix default value;
